--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +1-619-993-3939</p>
+<p>Email: pbabbitt2@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  260 E Flamingo Rd #211<br />
+  Las Vegas<br />
+  Nevada <br />
 </p>
